--- a/testapp/android/settings.gradle
+++ b/testapp/android/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'testapp'
+rootProject.name = 'testApp'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
