--- a/testapp/ios/Podfile
+++ b/testapp/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'testapp' do
-  # Pods for testapp
+target 'testApp' do
+  # Pods for testApp
   pod 'React', :path => '../node_modules/react-native/'
   pod 'React-Core', :path => '../node_modules/react-native/React'
   pod 'React-DevSupport', :path => '../node_modules/react-native/React'
@@ -28,7 +28,7 @@ target 'testapp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'testappTests' do
+  target 'testAppTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -36,10 +36,10 @@ target 'testapp' do
   use_native_modules!
 end
 
-target 'testapp-tvOS' do
-  # Pods for testapp-tvOS
+target 'testApp-tvOS' do
+  # Pods for testApp-tvOS
 
-  target 'testapp-tvOSTests' do
+  target 'testApp-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
