--- a/testapp/ios/testapp.xcodeproj/xcshareddata/xcschemes/testapp-tvOS.xcscheme
+++ b/testapp/ios/testapp.xcodeproj/xcshareddata/xcschemes/testapp-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "testapp-tvOS.app"
-               BlueprintName = "testapp-tvOS"
-               ReferencedContainer = "container:testapp.xcodeproj">
+               BuildableName = "testApp-tvOS.app"
+               BlueprintName = "testApp-tvOS"
+               ReferencedContainer = "container:testApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "testapp-tvOSTests.xctest"
-               BlueprintName = "testapp-tvOSTests"
-               ReferencedContainer = "container:testapp.xcodeproj">
+               BuildableName = "testApp-tvOSTests.xctest"
+               BlueprintName = "testApp-tvOSTests"
+               ReferencedContainer = "container:testApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "testapp-tvOSTests.xctest"
-               BlueprintName = "testapp-tvOSTests"
-               ReferencedContainer = "container:testapp.xcodeproj">
+               BuildableName = "testApp-tvOSTests.xctest"
+               BlueprintName = "testApp-tvOSTests"
+               ReferencedContainer = "container:testApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "testapp-tvOS.app"
-            BlueprintName = "testapp-tvOS"
-            ReferencedContainer = "container:testapp.xcodeproj">
+            BuildableName = "testApp-tvOS.app"
+            BlueprintName = "testApp-tvOS"
+            ReferencedContainer = "container:testApp.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "testapp-tvOS.app"
-            BlueprintName = "testapp-tvOS"
-            ReferencedContainer = "container:testapp.xcodeproj">
+            BuildableName = "testApp-tvOS.app"
+            BlueprintName = "testApp-tvOS"
+            ReferencedContainer = "container:testApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "testapp-tvOS.app"
-            BlueprintName = "testapp-tvOS"
-            ReferencedContainer = "container:testapp.xcodeproj">
+            BuildableName = "testApp-tvOS.app"
+            BlueprintName = "testApp-tvOS"
+            ReferencedContainer = "container:testApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
